<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet_dark">

    <cleverpumpkintesttask.programmerr47.github.com.flightsviewer.representation.view.ParallaxScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:background="@color/white_pure">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_pure">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/plane"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/flightCover"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/ic_launcher"
                    android:scaleType="centerCrop"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom|center_horizontal">

                    <TextView
                        android:id="@+id/flightFrom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="8dp"
                        android:text="Астрахань"
                        android:gravity="right"
                        android:singleLine="true"
                        android:textColor="@color/white_pure"
                        android:textSize="24sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_flight"/>

                    <TextView
                        android:id="@+id/flightTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="Шмастрахань"
                        android:gravity="left"
                        android:singleLine="true"
                        android:textColor="@color/white_pure"
                        android:textSize="24sp"/>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="horizontal"
                android:background="@color/gray_light_very">

                <TextView
                    android:id="@+id/flightCarrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/FLIGHT_PROVIDED_BY"
                    android:singleLine="true"
                    android:textColor="@color/gray_dark_very_transparent_semi"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_pure">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/PRICE"
                    android:textColor="@color/gray_dark_very_transparent_light"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="8dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_price" />

                    <TextView
                        android:id="@+id/flightPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="15 443.00"
                        android:textColor="@color/gray_dark_very_transparent_light"
                        android:textSize="30sp"
                        style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/RUBLES"
                        android:textColor="@color/gray_dark_very_transparent_semi"
                        style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_light_very"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_pure">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/SCHEDULE"
                    android:textColor="@color/gray_dark_very_transparent_light"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">

                    <TableRow
                        android:layout_marginBottom="8dp">

                        <ImageView
                            android:layout_marginRight="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_takeoff"/>

                        <TextView
                            android:id="@+id/takeoffTime"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:text="00:00"
                            android:textColor="@color/gray_dark_very_transparent_light"
                            android:textSize="30sp"
                            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"/>

                        <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/takeoffDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="1812-01-01"
                                android:textColor="@color/gray_dark_very_transparent_semi"
                                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"/>

                            <TextView
                                android:id="@+id/takeoffCity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Астрахань"
                                android:textColor="@color/gray_dark_very_transparent_semi"
                                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"/>

                        </LinearLayout>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="8dp">

                        <ImageView
                            android:layout_marginRight="8dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_landing"/>

                        <TextView
                            android:id="@+id/landingTime"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:text="12:12"
                            android:textColor="@color/gray_dark_very_transparent_light"
                            android:textSize="30sp"
                            style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"/>

                        <LinearLayout
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/landingDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="3443-11-22"
                                android:textColor="@color/gray_dark_very_transparent_semi"
                                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"/>

                            <TextView
                                android:id="@+id/landingCity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="Шмастрахань"
                                android:textColor="@color/gray_dark_very_transparent_semi"
                                style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"/>

                        </LinearLayout>

                    </TableRow>

                </TableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_light_very"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_pure">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/DESCRIPTION"
                    android:textColor="@color/gray_dark_very_transparent_light"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"/>

                <TextView
                    android:id="@+id/flightDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Популярный и недорогой рейс, который используется для того, чтобы перевозить различный людей, у которых либо нет денег, либо они очень жестко экономят."
                    android:textColor="@color/gray_dark_very_transparent_semi"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_light_very"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_pure">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/ADDITIONAL_INFO"
                    android:textColor="@color/gray_dark_very_transparent_light"
                    style="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp">

                    <TableRow
                        android:layout_marginBottom="4dp">

                        <TextView
                            android:layout_marginRight="8dp"
                            android:text="@string/FLIGHT_DURATION"
                            android:textColor="@color/gray_dark_very_transparent_light"/>

                        <TextView
                            android:id="@+id/flightDuration"
                            android:layout_marginLeft="8dp"
                            android:text="01:32"
                            android:singleLine="true"
                            android:gravity="left"
                            android:textColor="@color/gray_dark_very_transparent_semi"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp">

                        <TextView
                            android:layout_marginRight="8dp"
                            android:text="@string/FLIGHT_NUMBER"
                            android:textColor="@color/gray_dark_very_transparent_light"/>

                        <TextView
                            android:id="@+id/flightNumber"
                            android:layout_marginLeft="8dp"
                            android:text="1023"
                            android:singleLine="true"
                            android:gravity="left"
                            android:textColor="@color/gray_dark_very_transparent_semi"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginTop="4dp">

                        <TextView
                            android:layout_marginRight="8dp"
                            android:text="@string/TYPE_OF_PLANE"
                            android:textColor="@color/gray_dark_very_transparent_light"/>

                        <TextView
                            android:id="@+id/typeOfPlane"
                            android:layout_marginLeft="8dp"
                            android:text="320"
                            android:singleLine="true"
                            android:gravity="left"
                            android:textColor="@color/gray_dark_very_transparent_semi"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>

    </cleverpumpkintesttask.programmerr47.github.com.flightsviewer.representation.view.ParallaxScrollView>

    <cleverpumpkintesttask.programmerr47.github.com.flightsviewer.representation.view.FloatingActionButton
        android:id="@+id/buyTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_fab_buy"
        app:fab_colorNormal="@color/orange_light"
        app:fab_colorPressed="@color/orange_pure"
        app:fab_type="normal"/>

</FrameLayout>